--- a/index.html
+++ b/index.html
@@ -46,11 +46,16 @@ maximum-scale=1.0, user-scalable=no" />
   	           <div class="row">
                    <div class="col-md-12 col-sm-12 text">
                        <h1>Hi, I am Adam, industry expert developer</h1>
+                       <p>Hi, I am Adam, an industry expert</p>
                    </div>
   	            </div>
              </div>
+ </div>
+<div class="conteiner">
+  <div class="row">
+    <div style="height:480px;"></div>
+  </div>
 </div>
-
 
 <div class="line">
   <div class="container">
@@ -65,10 +70,10 @@ maximum-scale=1.0, user-scalable=no" />
               <div class="progress-bar progress-bar-danger"  style="width:28%" >
               </div>
          </div>
-         <span style="font-size:20px;">Development</span>
+         <span style="font-size:20px";>Development</span>
          <span style="float:right";>52%</span>
       <div class="progress">
-            <div class="progress-bar progress-bar-danger" style="width:52%, ">
+            <div class="progress-bar progress-bar-danger" style="width:52%">
             </div>
       </div>
          <span style="font-size:20px;">Sound Effects</span>
@@ -94,7 +99,12 @@ maximum-scale=1.0, user-scalable=no" />
    </div>
   </div>
 </div>
-  <div class="icons">
+<div class="conteiner">
+  <div class="row">
+    <div style="height:80px;"></div>
+  </div>
+</div>
+<div class="icons">
     <div class="container">
         <div class="row"> 
           <div class="photos">
@@ -118,8 +128,12 @@ maximum-scale=1.0, user-scalable=no" />
         </div>
       </div>
 </div>
-
- <div class="Numbers">
+<div class="conteiner">
+  <div class="row">
+    <div style="height:80px;"></div>
+  </div>
+</div>
+<div class="Numbers">
      <div class="container">
         <div class="row"> 
             <div class="col-md-3 col-sm-6 ">
@@ -154,39 +168,205 @@ maximum-scale=1.0, user-scalable=no" />
 
                   <div class="col-md-4 col-sm-6 photos">
                     <img src="7.png">
-                       <h5> Vimeo FX Showreel</h5>
-                        <p style="font-size:12px; color:#f0304a">Web Design</p>
+                       <h5 style="  font-size:16px; margin-left:20px;"> Vimeo FX Showreel</h5>
+                        <p style="font-size:14px; color:#f0304a; margin-left:20px;">Web Design</p>
                   </div>
                   <div class="col-md-4 col-sm-6">
                     <img src="8.png">
-                        <h5> Venice Art Pavilion</h5>
-                        <p style="font-size:12px; color:#f0304a">Web Design</p>
+                        <h5 style="  font-size:16px; margin-left:20px;"> Venice Art Pavilion</h5>
+                        <p style="font-size:14px; color:#f0304a; margin-left:20px; ">Web Design</p>
                   </div>
                    <div class="col-md-4 col-sm-6">
                        <img src="9.png">
-                       <h5> Berlin Design Week</h5>
-                       <p style="font-size:12px; color:#f0304a">Web Design</p>
+                       <h5 style="  font-size:16px; margin-left:20px;"> Berlin Design Week</h5>
+                       <p style="font-size:14px; color:#f0304a; margin-left:20px;">Web Design</p>
                    </div>
+                   <div class="conteiner">
+                        <div class="row">
+                          <div style="height:20px;"></div>
+                        </div>
+                      </div>
                    <div class="col-md-4 col-sm-6">
                        <img src="10.png">
-                       <h5> Stockholm Fashion</h5>
-                       <p style="font-size:12px; color:#f0304a">Web Design</p>
+                       <h5 style="  font-size:16px; margin-left:20px;"> Stockholm Fashion</h5>
+                       <p style="font-size:14px; color:#f0304a; margin-left:20px;">Web Design</p>
                    </div>
                    <div class="col-md-4 col-sm-6">
                        <img src="11.png">
-                       <h5> Last Iceland Sunshine</h5>
-                       <p style="font-size:12px; color:#f0304a">Web Design</p>
+                       <h5 style="  font-size:16px; margin-left:20px;"> Last Iceland Sunshine</h5>
+                       <p style="font-size:14px; color:#f0304a; margin-left:20px;">Web Design</p>
                    </div>
                    <div class="col-md-4 col-sm-6" >
                        <img src="12.png">
-                       <h5> Art & Design Blvd</h5>
-                       <p style="font-size:12px; color:#f0304a">Web Design</p>
+                       <h5 style=" font-size:16px; margin-left:20px;"> Art & Design Blvd</h5>
+                       <p style="font-size:14px; color:#f0304a; margin-left:20px;">Web Design</p>
                    </div>
                 </div>             
             </div>
         </div>
    </div>
+<div class="latest">
+    <div class="container">
+      <div class="row">
+       <div class="row">
+           <div class="tweets">
+              <h1>Latest tweets</h1>
+              <div class="conteiner">
+                        <div class="row">
+                          <div style="height:30px;"></div>
+                        </div>
+                      </div>
+
+                <div class="conteiner">
+                    <div class="row">
+                         <div style="height:30px;"></div>
+                    </div>
+                </div>
+              <p>Here is a selection of my best projects for worldwide clients</p>
+            </div>
+         </div>
+            <div class="conteiner">
+              <div class="row">
+                <div style="height:80px;"></div>
+              </div>
+            </div>
+           <div class="column">
+              <div class="row">
+               <div class="col-md-4 qode">
+                   <img src="13.png">
+                   <h5>Qode Themes</h5>
+                   <span>@QodeThemes</span>
+                   <span>Jun 06</span>
+                   <p>Take a glance at our blog to find out more<br> about the powerful Bridge theme:<br> https://t.co/K7SC1CEkSb #wordpress<br> #themes</p>
+                </div>
+                <div class="col-md-4 qode">
+                   <img src="13.png">
+                   <h5>Qode Themes</h5>
+                   <span>@QodeThemes</span>
+                   <span>Jun 06</span>
+                   <p>With over 150 demos, Bridge has a<br> solution for all your website needs:<br> https://t.co/N05KaD9cAl #wordpress<br> #themes</p>
+                </div>
+                <div class="col-md-4 qode">
+                   <img src="13.png">
+                   <h5>Qode Themes</h5>
+                   <span>@QodeThemes</span>
+                   <span>Jun 06</span>
+                   <p>Check out the all-new, updated, and fully<br> modernized Bridge theme:<br> https://t.co/N05KaD9cAl #wordpress</p>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 qode">
+                   <img src="13.png">
+                   <h5>Qode Themes</h5>
+                   <span>@QodeThemes</span>
+                   <span>Jun 06</span>
+                   <p>Hop over to our blog to find out what's<br> new in Bridge 9.2:<br> https://t.co/N05KaD9cAl</p>
+                </div>
+                <div class="col-md-4 qode">
+                   <img src="13.png">
+                   <h5 >Qode Themes</h5>
+                   <span>@QodeThemes</span>
+                   <span>Jun 06</span>
+                   <p>Make your business beautiful with the<br> Bridge theme for WordPress:<br> https://t.co/N05KaD9cAl</p>
+                </div>
+                <div class="col-md-4 qode">
+                   <img src="13.png">
+                   <h5>Qode Themes</h5>
+                   <span>@QodeThemes</span>
+                   <span>Jun 06</span>
+                   <p>Visit Our New Website!<br> http://t.co/yPUyjc3X</p>
+                </div>
+              </div>
+            </div> <!--column end-->
+        </div> <!--row end-->
+   </div> <!--container end-->
+</div> <!--latest-->
 
 
-</body>
+ <div style="height:80px;"></div>   
+ <div class="container">   <!-- container start-->
+    <div class="row">       <!--row start-->
+        <div class="hire">
+              <div class="col-sm-12 col-md-6">
+                  <h2>Hire me</h2>
+                  <div style="height:20px;"></div>
+                  <p>I am a curious individual who is passionate about science, math, and technology. I am a habitual knowledge seeker who loves knowing how things work.</p>      
+              </div>            
+                <div class="text-box">
+                  <div class="conteiner">
+                       <div style="height:50px;"></div>
+                        
+                    </div>
+                      
+                        <div style="height:8px;"></div>
+                        <span>
+                            <input type="text" name="full name"value size="50" placeholder="Your full name here">
+                       </span>
+                       <div style="height:8px;"></div>
+                       <span>
+                              <input type="email" name="email" value size="50" placeholder="Your e-mail address">
+                       </span>
+                       <div style="height:8px;"></div>
+                               <textarea name="message" cols="50" rows="10" placeholder="Write your message here......"></textarea>
+                       <div style="height:8px;"></div>
+                       <div class="table">
+                             <input type="submit" value="Sending message">
+                             <img src="20.gif" alt="ajax loader"  style="visibility:hidden">
+                     </div>
+                  </div>                
+              </div>
+    </div>  <!--row end--> 
+ </div>  <!-- container end--> 
+                   <div class="conteiner">
+                        <div class="row">
+                          <div style="height:30px;"></div>
+                        </div>
+                      </div>
+
+<div class="footer">
+     <div class="container-fluid">
+        <div class="row">
+           <div class="instagram">
+            <div class="row">
+               <h3>My <span style="color:#f0304a">Instagram </span>feed</h3>
+              </div>
+              <div class="conteiner">
+                        <div class="row">
+                          <div style="height:50px;"></div>
+                        </div>
+                      </div>
+
+              <div class="row">
+               <div class="col-md-2 col-sm-12">
+                  <img src="14.jpg">
+               </div>
+               <div class="col-md-2 col-sm-12">
+                  <img src="15.jpg">
+               </div>
+               <div class="col-md-2 col-sm-12">
+                  <img src="16.jpg">
+               </div>
+               <div class="col-md-2 col-sm-12">
+                  <img src="17.jpg">
+               </div>
+               <div class="col-md-2 col-sm-12">
+                  <img src="18.jpg">
+               </div>
+               <div class="col-md-2 col-sm-12">
+                  <img src="19.jpg">
+               </div>
+
+             </div> <!--img row-->
+          </div> <!--instagram-->
+        </div>   <!--row-->
+     </div>    <!--container-fulid-->
+    <div class="container-fluid">
+      <div class="row">
+         <div class="bottom">
+            <p>Copyright 2016 <span style="color:#f0304a">Qode Interactive</span></p>
+         </div>
+      </div>
+    </div>
+  </div>   <!--footer-->
+ </body>
 </html>
